gen/cloudtasks/v2beta3/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-cloudtasks2_beta3 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/cloudtasks/v2beta3/lib)
error[E0433]: failed to resolve: unresolved import
    --> gen/cloudtasks/v2beta3/lib/src/lib.rs:3966:50
     |
3966 |                     response_view: Option<crate::tasks::params::GetResponseView>,
     |                                                  ^^^^^
     |                                                  |
     |                                                  unresolved import
     |                                                  help: a similar path exists: `crate::projects::locations::queues::tasks`

error[E0433]: failed to resolve: unresolved import
    --> gen/cloudtasks/v2beta3/lib/src/lib.rs:3983:39
     |
3983 |                         value: crate::tasks::params::GetResponseView,
     |                                       ^^^^^
     |                                       |
     |                                       unresolved import
     |                                       help: a similar path exists: `crate::projects::locations::queues::tasks`

error[E0433]: failed to resolve: unresolved import
    --> gen/cloudtasks/v2beta3/lib/src/lib.rs:4108:50
     |
4108 |                     response_view: Option<crate::tasks::params::ListResponseView>,
     |                                                  ^^^^^
     |                                                  |
     |                                                  unresolved import
     |                                                  help: a similar path exists: `crate::projects::locations::queues::tasks`

error[E0433]: failed to resolve: unresolved import
    --> gen/cloudtasks/v2beta3/lib/src/lib.rs:4135:39
     |
4135 |                         value: crate::tasks::params::ListResponseView,
     |                                       ^^^^^
     |                                       |
     |                                       unresolved import
     |                                       help: a similar path exists: `crate::projects::locations::queues::tasks`

error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/cloudtasks/v2beta3/lib/src/lib.rs:1288:13
     |
1288 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `queues::QueuesActions`
    --> gen/cloudtasks/v2beta3/lib/src/lib.rs:1341:17
     |
1341 |                 queues::QueuesActions
     |                 ^^^^^^^^^^^^^^^^^^^^^ did you mean `queues::QueuesActions { /* fields */ }`?

error[E0423]: expected value, found struct `tasks::TasksActions`
    --> gen/cloudtasks/v2beta3/lib/src/lib.rs:1964:21
     |
1964 |                     tasks::TasksActions
     |                     ^^^^^^^^^^^^^^^^^^^ did you mean `tasks::TasksActions { /* fields */ }`?

warning: unreachable expression
    --> gen/cloudtasks/v2beta3/lib/src/lib.rs:3535:29
     |
3535 | /                             Ok(match value {
3536 | |                                 _ => {
3537 | |                                     return Err(::serde::de::Error::custom(format!(
3538 | |                                         "invalid enum for #name: {}",
...    |
3541 | |                                 }
3542 | |                             })
     | |______________________________^
     |
     = note: #[warn(unreachable_code)] on by default

warning: unreachable expression
    --> gen/cloudtasks/v2beta3/lib/src/lib.rs:3571:29
     |
3571 | /                             Ok(match value {
3572 | |                                 _ => {
3573 | |                                     return Err(::serde::de::Error::custom(format!(
3574 | |                                         "invalid enum for #name: {}",
...    |
3577 | |                                 }
3578 | |                             })
     | |______________________________^

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-cloudtasks2_beta3`.

To learn more, run the command again with --verbose.
